<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DaftarActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tempat_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_aplikasi"
                android:textStyle="bold"
                style="@style/TextAppearance.Material3.HeadlineLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/register_huruf_besar"
                style="@style/TextAppearance.Material3.HeadlineMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tempat_judul" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_nama_register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/nama"
                android:paddingHorizontal="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/inputan_nama_registrasi"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email_register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/email"
                android:paddingHorizontal="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_nama_register_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/inputan_email_registrasi"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password_register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                android:paddingHorizontal="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email_register_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:id="@+id/inputan_password_registrasi"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_register_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="24dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_password_register_layout" />

            <TextView
                android:id="@+id/text_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun_login"
                app:layout_constraintStart_toStartOf="@id/button_register_person"
                app:layout_constraintTop_toBottomOf="@id/button_register_person"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/klik_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disini"
                android:layout_marginStart="5dp"
                android:textColor="#2196F3"
                app:layout_constraintStart_toEndOf="@id/text_question"
                app:layout_constraintTop_toTopOf="@id/text_question"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loading_animation"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminate="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>